@@ -46,17 +46,17 @@ public class RegistrationServiceTests {
     @InjectMocks
     private RegistrationService registrationService;
 
-    private static final int validEventId = 321;
-    private static final int validPlayerId = 566;
-    private static final String eventName = "Clue Event";
-    private static final String eventDescription = "Clue Event Description";
-    private static final Date eventDate = Date.valueOf(LocalDate.now().plusDays(7));
-    private static final Date eventDate2 = Date.valueOf(LocalDate.now().plusDays(10));
-    private static final Time startTime = Time.valueOf("17:00:00");
-    private static final Time endTime = Time.valueOf("20:00:00");
-    private static final String maxLimit = "6";
-    private static final String location = "Trottier";
-    private static final BoardGame game = new BoardGame(3, 6, "Clue", "Clue Description");
+    private static final int VALID_EVENT_ID = 321;
+    private static final int VALID_PLAYER_ID = 566;
+    private static final String EVENT_NAME = "Clue Event";
+    private static final String EVENT_DESCRIPTION = "Clue Event Description";
+    private static final Date EVENT_DATE = Date.valueOf(LocalDate.now().plusDays(7));
+    private static final Date EVENT_DATE_2 = Date.valueOf(LocalDate.now().plusDays(10));
+    private static final Time START_TIME = Time.valueOf("17:00:00");
+    private static final Time END_TIME = Time.valueOf("20:00:00");
+    private static final String MAX_LIMIT = "6";
+    private static final String LOCATION = "Trottier";
+    private static final BoardGame GAME = new BoardGame(3, 6, "Clue", "Clue Description");
 
     @BeforeEach
     @AfterEach
@@ -73,13 +73,13 @@ public class RegistrationServiceTests {
     @Test
     public void testCreateValidRegistration() {
     // Arrange
-    RegistrationCreationDto dto = new RegistrationCreationDto(validPlayerId, validEventId);
+    RegistrationCreationDto dto = new RegistrationCreationDto(VALID_PLAYER_ID, VALID_EVENT_ID);
 
     Player player = new Player("Maya", "maya@gmail.com", "12345678", true); 
-    Event event = new Event(eventName, eventDescription, maxLimit, eventDate, startTime, endTime, location, player, game);
+    Event event = new Event(EVENT_NAME, EVENT_DESCRIPTION, MAX_LIMIT, EVENT_DATE, START_TIME, END_TIME, LOCATION, player, GAME);
     
-    when(playerRepository.findByPlayerID(validPlayerId)).thenReturn(player);
-    when(eventRepository.findByEventID(validEventId)).thenReturn(event);
+    when(playerRepository.findByPlayerID(VALID_PLAYER_ID)).thenReturn(player);
+    when(eventRepository.findByEventID(VALID_EVENT_ID)).thenReturn(event);
     when(registrationRepository.save(any(Registration.class))).thenAnswer((InvocationOnMock iom) -> iom.getArgument(0));
 
     // Act
@@ -89,8 +89,8 @@ public class RegistrationServiceTests {
     assertNotNull(createdRegistration);
     assertEquals(player, createdRegistration.getKey().getRegistrant());
     assertEquals(event, createdRegistration.getKey().getEvent());
-    verify(playerRepository, times(1)).findByPlayerID(validPlayerId);
-    verify(eventRepository, times(1)).findByEventID(validEventId);
+    verify(playerRepository, times(1)).findByPlayerID(VALID_PLAYER_ID);
+    verify(eventRepository, times(1)).findByEventID(VALID_EVENT_ID);
     verify(registrationRepository, times(1)).save(any(Registration.class));
     }
 
@@ -99,26 +99,26 @@ public class RegistrationServiceTests {
    */
     @Test
     public void testFindRegistrationByKey() {
-        //Arange
+        // Arange
         Player player = new Player("Maya", "maya@gmail.com", "12345678", true);    
-        Event event = new Event(eventName, eventDescription, maxLimit, eventDate, startTime, endTime, location, player, game);
+        Event event = new Event(EVENT_NAME, EVENT_DESCRIPTION, MAX_LIMIT, EVENT_DATE, START_TIME, END_TIME, LOCATION, player, GAME);
     
         Registration registration = new Registration(new Registration.Key(player,event));
     
-        when(playerRepository.findByPlayerID(validPlayerId)).thenReturn(player);
-        when(eventRepository.findByEventID(validEventId)).thenReturn(event);
+        when(playerRepository.findByPlayerID(VALID_PLAYER_ID)).thenReturn(player);
+        when(eventRepository.findByEventID(VALID_EVENT_ID)).thenReturn(event);
         when(registrationRepository.findRegistrationByKey(new Registration.Key(player,event))).thenReturn(registration);
    
-        //Act
-        Registration retrievedRegistration = registrationService.getRegistrationByKey(validPlayerId, validEventId);
+        // Act
+        Registration retrievedRegistration = registrationService.getRegistrationByKey(VALID_PLAYER_ID, VALID_EVENT_ID);
 
-        //Assert
+        // Assert
         assertNotNull(retrievedRegistration);
         assertEquals(registration, retrievedRegistration);
         assertEquals(player, retrievedRegistration.getKey().getRegistrant());
         assertEquals(event, retrievedRegistration.getKey().getEvent());
-        verify(playerRepository, times(1)).findByPlayerID(validPlayerId);
-        verify(eventRepository, times(1)).findByEventID(validEventId);
+        verify(playerRepository, times(1)).findByPlayerID(VALID_PLAYER_ID);
+        verify(eventRepository, times(1)).findByEventID(VALID_EVENT_ID);
     }
 
     /**
@@ -126,12 +126,12 @@ public class RegistrationServiceTests {
     */
     @Test
     public void testGetAllRegistrations() {
-        //Arrange
+        // Arrange
         Player player1 = new Player("Maya", "maya@gmail.com", "12345678", true);
         Player player2 = new Player("Sara", "sara@gmail.com", "90823456", false);
     
-        Event event1 = new Event(eventName, eventDescription, maxLimit, eventDate, startTime, endTime, location, player1, game);
-        Event event2 = new Event(eventName, eventDescription, maxLimit, eventDate2, startTime, endTime, location, player1, game);
+        Event event1 = new Event(EVENT_NAME, EVENT_DESCRIPTION, MAX_LIMIT, EVENT_DATE, START_TIME, END_TIME, LOCATION, player1, GAME);
+        Event event2 = new Event(EVENT_NAME, EVENT_DESCRIPTION, MAX_LIMIT, EVENT_DATE_2, START_TIME, END_TIME, LOCATION, player1, GAME);
         
         Registration registration1 = new Registration(new Registration.Key(player1,event1));
         Registration registration2 = new Registration(new Registration.Key(player2,event2));
@@ -140,14 +140,14 @@ public class RegistrationServiceTests {
 
         when(registrationRepository.findAll()).thenReturn(mockRegistrations);
 
-        //Act
+        // Act
         List<Registration> retrievedRegistrations =registrationService.getAllRegistrations();
 
-        //Assert
+        // Assert
         assertNotNull(retrievedRegistrations);
         assertEquals(2, retrievedRegistrations.size());
         // Assertions for Registration 1
-        assertEquals(registration1, retrievedRegistrations.getFirst());
+        assertEquals(registration1, retrievedRegistrations.get(0));
         assertEquals(player1, retrievedRegistrations.get(0).getKey().getRegistrant());
         assertEquals(event1, retrievedRegistrations.get(0).getKey().getEvent());
         // Assertions for Registration 2
@@ -163,27 +163,27 @@ public class RegistrationServiceTests {
    */
     @Test
     public void testGetAllRegistrationsForPlayer() {
-        //Arrange
+        // Arrange
         Player player = new Player("Maya", "maya@gmail.com", "12345678", true);
-        Event event1 = new Event(eventName, eventDescription, maxLimit, eventDate, startTime, endTime, location, player, game);
-        Event event2 = new Event(eventName, eventDescription, maxLimit, eventDate2, startTime, endTime, location, player, game);
+        Event event1 = new Event(EVENT_NAME, EVENT_DESCRIPTION, MAX_LIMIT, EVENT_DATE, START_TIME, END_TIME, LOCATION, player, GAME);
+        Event event2 = new Event(EVENT_NAME, EVENT_DESCRIPTION, MAX_LIMIT, EVENT_DATE_2, START_TIME, END_TIME, LOCATION, player, GAME);
         
         Registration registration1 = new Registration(new Registration.Key(player,event1));
         Registration registration2 = new Registration(new Registration.Key(player,event2));
 
         List<Registration> mockRegistrations = List.of(registration1, registration2);
 
-        when(playerRepository.findByPlayerID(validPlayerId)).thenReturn(player);
+        when(playerRepository.findByPlayerID(VALID_PLAYER_ID)).thenReturn(player);
         when(registrationRepository.findRegistrationByPlayer(player)).thenReturn(mockRegistrations);
 
-        //Act
-        List<Registration> retrievedRegistrations =registrationService.getAllRegistrationsByPlayer(validPlayerId);
+        // Act
+        List<Registration> retrievedRegistrations =registrationService.getAllRegistrationsByPlayer(VALID_PLAYER_ID);
         
-        //Assert
+        // Assert
         assertNotNull(retrievedRegistrations);
         assertEquals(2, retrievedRegistrations.size());
         // Assertions for Registration 1
-        assertEquals(registration1, retrievedRegistrations.getFirst());
+        assertEquals(registration1, retrievedRegistrations.get(0));
         assertEquals(player, retrievedRegistrations.get(0).getKey().getRegistrant());
         assertEquals(event1, retrievedRegistrations.get(0).getKey().getEvent());
         // Assertions for Registration 2
@@ -197,27 +197,27 @@ public class RegistrationServiceTests {
    */
     @Test
     public void testGetAllRegistrationsForEvent() {
-        //Arrange
+        // Arrange
         Player player1 = new Player("Maya", "maya@gmail.com", "12345678", true);
         Player player2 = new Player("Sara", "sara@gmail.com", "90823456", false);
-        Event event = new Event(eventName, eventDescription, maxLimit, eventDate, startTime, endTime, location, player1, game);
+        Event event = new Event(EVENT_NAME, EVENT_DESCRIPTION, MAX_LIMIT, EVENT_DATE, START_TIME, END_TIME, LOCATION, player1, GAME);
     
         Registration registration1 = new Registration(new Registration.Key(player1,event));
         Registration registration2 = new Registration(new Registration.Key(player2,event));
 
         List<Registration> mockRegistrations = List.of(registration1, registration2);
 
-        when(eventRepository.findByEventID(validEventId)).thenReturn(event);
+        when(eventRepository.findByEventID(VALID_EVENT_ID)).thenReturn(event);
         when(registrationRepository.findRegistrationByEvent(event)).thenReturn(mockRegistrations);
         
-        //Act
-        List<Registration> retrievedRegistrations =registrationService.getAllRegistrationsByEvent(validEventId);
+        // Act
+        List<Registration> retrievedRegistrations =registrationService.getAllRegistrationsByEvent(VALID_EVENT_ID);
         
-        //Assert
+        // Assert
         assertNotNull(retrievedRegistrations);
         assertEquals(2, retrievedRegistrations.size());
         // Assertions for Registration 1
-        assertEquals(registration1, retrievedRegistrations.getFirst());
+        assertEquals(registration1, retrievedRegistrations.get(0));
         assertEquals(player1, retrievedRegistrations.get(0).getKey().getRegistrant());
         assertEquals(event, retrievedRegistrations.get(0).getKey().getEvent());
         // Assertions for Registration 2
@@ -231,23 +231,23 @@ public class RegistrationServiceTests {
    */
     @Test
     public void testDeleteRegistrationSuccess () {
-        //Arrange
+        // Arrange
         Player player = new Player("Maya", "maya@gmail.com", "12345678", true);
-        Event event = new Event(eventName, eventDescription, maxLimit, eventDate, startTime, endTime, location, player, game);
+        Event event = new Event(EVENT_NAME, EVENT_DESCRIPTION, MAX_LIMIT, EVENT_DATE, START_TIME, END_TIME, LOCATION, player, GAME);
     
         Registration.Key registrationKey = new Registration.Key(player,event);
     
-        when(playerRepository.findByPlayerID(validPlayerId)).thenReturn(player);
-        when(eventRepository.findByEventID(validEventId)).thenReturn(event);
+        when(playerRepository.findByPlayerID(VALID_PLAYER_ID)).thenReturn(player);
+        when(eventRepository.findByEventID(VALID_EVENT_ID)).thenReturn(event);
         when(registrationRepository.existsById(registrationKey)).thenReturn(true); 
 
-        //Act
-        registrationService.deleteRegistration(validPlayerId, validEventId);
+        // Act
+        registrationService.deleteRegistration(VALID_PLAYER_ID, VALID_EVENT_ID);
 
-        //Assert
+        // Assert
         verify(registrationRepository, times(1)).deleteById(registrationKey);
-        verify(playerRepository, times(1)).findByPlayerID(validPlayerId);
-        verify(eventRepository, times(1)).findByEventID(validEventId);
+        verify(playerRepository, times(1)).findByPlayerID(VALID_PLAYER_ID);
+        verify(eventRepository, times(1)).findByEventID(VALID_EVENT_ID);
         verify(registrationRepository, times(1)).existsById(registrationKey);
     }
 
@@ -256,18 +256,18 @@ public class RegistrationServiceTests {
    */
     @Test
     public void testFindRegistrationThatDoesNotExist() {
-        //Arrange
+        // Arrange
         Player player = new Player("Maya", "maya@gmail.com", "12345678", false);
-        Event event = new Event(eventName, eventDescription, maxLimit, eventDate, startTime, endTime, location, player, game);
+        Event event = new Event(EVENT_NAME, EVENT_DESCRIPTION, MAX_LIMIT, EVENT_DATE, START_TIME, END_TIME, LOCATION, player, GAME);
         
-        when(playerRepository.findByPlayerID(validPlayerId)).thenReturn(player);
-        when(eventRepository.findByEventID(validEventId)).thenReturn(event);
+        when(playerRepository.findByPlayerID(VALID_PLAYER_ID)).thenReturn(player);
+        when(eventRepository.findByEventID(VALID_EVENT_ID)).thenReturn(event);
         when(registrationRepository.findRegistrationByKey(new Registration.Key(player, event))).thenReturn(null);
 
-        //Act
-        GlobalException e = assertThrows(GlobalException.class, () -> registrationService.getRegistrationByKey(validPlayerId, validEventId));
+        // Act
+        GlobalException e = assertThrows(GlobalException.class, () -> registrationService.getRegistrationByKey(VALID_PLAYER_ID, VALID_EVENT_ID));
 
-        //Assert
+        // Assert
         assertEquals(HttpStatus.NOT_FOUND, e.getStatus());
         assertEquals("No registration has been found.", e.getMessage());
     }
@@ -277,15 +277,15 @@ public class RegistrationServiceTests {
    */
     @Test
     public void testCreateRegistrationForInvalidPlayer() {
-        //Arrange
-        when(playerRepository.findByPlayerID(validPlayerId)).thenReturn(null);
+        // Arrange
+        when(playerRepository.findByPlayerID(VALID_PLAYER_ID)).thenReturn(null);
         
-        //Act
-        GlobalException e = assertThrows(GlobalException.class, () -> registrationService.getRegistrationByKey(validPlayerId, validEventId));
+        // Act
+        GlobalException e = assertThrows(GlobalException.class, () -> registrationService.getRegistrationByKey(VALID_PLAYER_ID, VALID_EVENT_ID));
 
-        //Assert
+        // Assert
         assertEquals(HttpStatus.NOT_FOUND, e.getStatus());
-        assertEquals("Player not found with ID: " + validPlayerId, e.getMessage());
+        assertEquals("Player not found with ID: " + VALID_PLAYER_ID, e.getMessage());
     }
 
     /**
@@ -293,80 +293,55 @@ public class RegistrationServiceTests {
    */
     @Test
     public void testCreateRegistrationForInvalidEvent() {
-        //Arrange
+        // Arrange
         Player player = new Player("Maya", "maya@gmail.com", "12345678", false);
-        when(playerRepository.findByPlayerID(validPlayerId)).thenReturn(player);
-        when(eventRepository.findByEventID(validEventId)).thenReturn(null);
+        when(playerRepository.findByPlayerID(VALID_PLAYER_ID)).thenReturn(player);
+        when(eventRepository.findByEventID(VALID_EVENT_ID)).thenReturn(null);
       
-        //Act
-        GlobalException e = assertThrows(GlobalException.class, () -> registrationService.getRegistrationByKey(validPlayerId, validEventId));
+        // Act
+        GlobalException e = assertThrows(GlobalException.class, () -> registrationService.getRegistrationByKey(VALID_PLAYER_ID, VALID_EVENT_ID));
 
-        //Assert
+        // Assert
         assertEquals(HttpStatus.NOT_FOUND, e.getStatus());
-        assertEquals("Event not found with ID: " + validEventId, e.getMessage());
+        assertEquals("Event not found with ID: " + VALID_EVENT_ID, e.getMessage());
     }
 
     /**
     * Tests finding a registration list that is empty.
    */
     @Test
-    public void testGetAllRegistrations_EmptyList() {
-        //Arrange
+    public void testGetAllRegistrationsOfEmptyList() {
+        // Arrange
         when(registrationRepository.findAll()).thenReturn(List.of());
 
-        //Act
-        List<Registration> retrievedRegistrations = registrationService.getAllRegistrations();
+        // Act
+        List<Registration> retrievedrRegistrations = registrationService.getAllRegistrations();
 
-        //Assert
-        assertNotNull(retrievedRegistrations);
-        assertEquals(0, retrievedRegistrations.size());
+        // Assert
+        assertNotNull(retrievedrRegistrations);
+        assertEquals(0, retrievedrRegistrations.size());
     }
 
-    /**
-    * Tests finding all registratiosn for an invalid player.
-   */
-    @Test
-    public void getAllRegistrationsForPlayer_nonexistentPlayer(){
-        //Act
-        GlobalException e = assertThrows(GlobalException.class, () -> registrationService.getAllRegistrationsByPlayer(validPlayerId));
-
-        //Assert
-        assertEquals(HttpStatus.NOT_FOUND, e.getStatus());
-        assertEquals("Player not found with ID: " + validPlayerId, e.getMessage());
-
-    }
-
-    /**
-    * Tests finding all registrations for an invalid event.
-   */
-    @Test
-    public void getAllRegistrationsForEvent_nonexistentEvent() {
-        //Act
-        GlobalException e = assertThrows(GlobalException.class, () -> registrationService.getAllRegistrationsByEvent(validEventId));
-
-        //Assert
-        assertEquals(HttpStatus.NOT_FOUND, e.getStatus());
-        assertEquals("Event not found with ID: " + validEventId, e.getMessage());
-    }
 
    /**
     * Tests deleting a registration that does not exist.
    */
     @Test
-    public void testDeleteRegistration_NotFound() {
-        //Arrange
+    public void testDeleteRegistrationNotFound() {
+        // Arrange
         Player player = new Player("Maya", "maya@gmail.com", "12345678", false);
-        Event event = new Event(eventName, eventDescription, maxLimit, eventDate, startTime, endTime, location, player, game);
+        Event event = new Event(EVENT_NAME, EVENT_DESCRIPTION, MAX_LIMIT, EVENT_DATE, START_TIME, END_TIME, LOCATION, player, GAME);
         
-        when(playerRepository.findByPlayerID(validPlayerId)).thenReturn(player);
-        when(eventRepository.findByEventID(validEventId)).thenReturn(event);
+        when(playerRepository.findByPlayerID(VALID_PLAYER_ID)).thenReturn(player);
+        when(eventRepository.findByEventID(VALID_EVENT_ID)).thenReturn(event);
         when(registrationRepository.existsById(new Registration.Key(player, event))).thenReturn(false);
 
-        //Act
+        // Act
         GlobalException e = assertThrows(
-        GlobalException.class, () -> registrationService.deleteRegistration(validPlayerId, validEventId));
+        GlobalException.class, () -> registrationService.deleteRegistration(VALID_PLAYER_ID, VALID_EVENT_ID)
+        );
 
-        //Assert
+        // Assert
         assertEquals(HttpStatus.NOT_FOUND, e.getStatus());
         assertEquals("Cannot delete: Registration not found", e.getMessage());
     }
@@ -377,25 +352,25 @@ public class RegistrationServiceTests {
     @Test
     public void testCreateRegistrationWithFullEvent() {
     // Arrange
-    RegistrationCreationDto dto = new RegistrationCreationDto(validPlayerId, validEventId);
+    RegistrationCreationDto dto = new RegistrationCreationDto(VALID_PLAYER_ID, VALID_EVENT_ID);
 
     Player player = new Player("Maya", "maya@gmail.com", "12345678", true); 
     Player player2 = new Player("Tom", "tom@gmail.com", "09654328", true); 
     Player player3 = new Player("Ben", "ben@gmail.com", "98765432", true); 
     
-    Event event = new Event(eventName, eventDescription, "2", eventDate, startTime, endTime, location, player, game);
+    Event event = new Event(EVENT_NAME, EVENT_DESCRIPTION, "2", EVENT_DATE, START_TIME, END_TIME, LOCATION, player, GAME);
     
-    when(playerRepository.findByPlayerID(validPlayerId)).thenReturn(player);
-    when(eventRepository.findByEventID(validEventId)).thenReturn(event);
+    when(playerRepository.findByPlayerID(VALID_PLAYER_ID)).thenReturn(player);
+    when(eventRepository.findByEventID(VALID_EVENT_ID)).thenReturn(event);
     List<Registration> mockRegistrations = new ArrayList<>();
     mockRegistrations.add(new Registration(new Registration.Key(player2, event)));
     mockRegistrations.add(new Registration(new Registration.Key(player3, event)));
     when(registrationRepository.findRegistrationByEvent(event)).thenReturn(mockRegistrations);
     
-    //Act
+    // Act
     GlobalException e = assertThrows(GlobalException.class, () -> registrationService.createRegistration(dto));
 
-    //Assert
+    // Assert
     assertEquals(HttpStatus.BAD_REQUEST, e.getStatus());
     assertEquals("Can't register: Event is full", e.getMessage());
     }
@@ -405,81 +380,109 @@ public class RegistrationServiceTests {
    */
     @Test
     public void testCreateRegistrationWithPlayerRegistered() {
-        //Arrange
-        RegistrationCreationDto dto = new RegistrationCreationDto(validPlayerId, validEventId);
+        // Arrange
+        RegistrationCreationDto dto = new RegistrationCreationDto(VALID_PLAYER_ID, VALID_EVENT_ID);
 
         Player player = new Player("Maya", "maya@gmail.com", "12345678", true); 
-        Event event = new Event(eventName, eventDescription, maxLimit, eventDate, startTime, endTime, location, player, game);
+        Event event = new Event(EVENT_NAME, EVENT_DESCRIPTION, MAX_LIMIT, EVENT_DATE, START_TIME, END_TIME, LOCATION, player, GAME);
         Registration existingRegistration = new Registration(new Registration.Key(player, event));
  
-        when(playerRepository.findByPlayerID(validPlayerId)).thenReturn(player);
-        when(eventRepository.findByEventID(validEventId)).thenReturn(event);
+        when(playerRepository.findByPlayerID(VALID_PLAYER_ID)).thenReturn(player);
+        when(eventRepository.findByEventID(VALID_EVENT_ID)).thenReturn(event);
         when(registrationRepository.findRegistrationByEvent(event)).thenReturn(List.of(existingRegistration)); 
  
-        //Act 
+        // Act 
         GlobalException e = assertThrows(GlobalException.class, () -> registrationService.createRegistration(dto));
         
-        //Assert
+        // Assert
         assertEquals(HttpStatus.BAD_REQUEST, e.getStatus());
         assertEquals("Player is already registered for this event", e.getMessage());
     }
 
     /**
-    * Tests deleting a registration for a invalid player.
+   * Tests deleting a registeration for an event that already occured.
    */
     @Test
-    public void testDeleteRegistrationEventNonExistentPlayer() {
+    public void testDeleteRegistrationEventAlreadyStarted() {
+        // Arrange
+        Player player = new Player("Maya", "maya@gmail.com", "12345678", true);
+        
+        Date pastDate = Date.valueOf(LocalDate.now().minusDays(1)); // Yesterday
+        Time pastStartTime = Time.valueOf(LocalTime.now().minusHours(2)); 
+        Time pastEndTime = Time.valueOf(LocalTime.now().minusHours(1));   
 
+        Event event = new Event(EVENT_NAME, EVENT_DESCRIPTION, MAX_LIMIT, pastDate, pastStartTime, pastEndTime, LOCATION, player, GAME);
+        
+        when(playerRepository.findByPlayerID(VALID_PLAYER_ID)).thenReturn(player);
+        when(eventRepository.findByEventID(VALID_EVENT_ID)).thenReturn(event);
+        when(registrationRepository.existsById(new Registration.Key(player, event))).thenReturn(true);
+        
+        // Act
+        GlobalException e = assertThrows(
+        GlobalException.class, () -> registrationService.deleteRegistration(VALID_PLAYER_ID, VALID_EVENT_ID)
+        );
+
+        // Assert
+        assertEquals(HttpStatus.BAD_REQUEST, e.getStatus());
+        assertEquals("Cannot delete: Event has already started or ended.", e.getMessage());
+    }
+
+   /**
+   * Tests finding all registratiosn for an invalid player.
+   */
+    @Test
+    public void testGetAllRegistrationsForPlayerNonexistentPlayer(){
         //Act
-        GlobalException e = assertThrows(GlobalException.class, () -> registrationService.deleteRegistration(validPlayerId, validEventId));
+        GlobalException e = assertThrows(GlobalException.class, () -> registrationService.getAllRegistrationsByPlayer(VALID_PLAYER_ID));
 
         //Assert
         assertEquals(HttpStatus.NOT_FOUND, e.getStatus());
-        assertEquals("Player not found with ID: " + validPlayerId, e.getMessage());
+        assertEquals("Player not found with ID: " + VALID_PLAYER_ID, e.getMessage());
+
+    }
+
+   /**
+   * Tests finding all registrations for an invalid event.
+   */
+    @Test
+    public void testGetAllRegistrationsForEventNonexistentEvent() {
+        //Act
+        GlobalException e = assertThrows(GlobalException.class, () -> registrationService.getAllRegistrationsByEvent(VALID_EVENT_ID));
+
+        //Assert
+        assertEquals(HttpStatus.NOT_FOUND, e.getStatus());
+        assertEquals("Event not found with ID: " + VALID_EVENT_ID, e.getMessage());
+    }
+
+    /**
+    * Tests deleting a registration for a invalid player.
+    */
+    @Test
+    public void testDeleteRegistrationEventNonexistentPlayer() {
+
+        //Act
+        GlobalException e = assertThrows(GlobalException.class, () -> registrationService.deleteRegistration(VALID_PLAYER_ID, VALID_EVENT_ID));
+
+        //Assert
+        assertEquals(HttpStatus.NOT_FOUND, e.getStatus());
+        assertEquals("Player not found with ID: " + VALID_PLAYER_ID, e.getMessage());
     }
 
     /**
     * Tests deleting a registration for a invalid event.
-   */
+    */
     @Test
-    public void testDeleteRegistrationEventNonExistentEvent() {
+    public void testDeleteRegistrationEventNonexistentEvent() {
         //Arrange
         Player player = new Player("Maya", "maya@gmail.com", "12345678", true);
-        when(playerRepository.findByPlayerID(validPlayerId)).thenReturn(player);
+        when(playerRepository.findByPlayerID(VALID_PLAYER_ID)).thenReturn(player);
 
         //Act
-        GlobalException e = assertThrows(GlobalException.class, () -> registrationService.deleteRegistration(validPlayerId, validEventId));
+        GlobalException e = assertThrows(GlobalException.class, () -> registrationService.deleteRegistration(VALID_PLAYER_ID, VALID_EVENT_ID));
 
         //Assert
         assertEquals(HttpStatus.NOT_FOUND, e.getStatus());
-        assertEquals("Event not found with ID: " + validEventId, e.getMessage());
+        assertEquals("Event not found with ID: " + VALID_EVENT_ID, e.getMessage());
     }
 
-    /**
-   * Tests creation of a new registration when player has already registered.
-   */
-    @Test
-    public void testDeleteRegistrationEventAlreadyStarted() {
-        //Arrange
-        Player player = new Player("Maya", "maya@gmail.com", "12345678", true);
-        
-        Date pastDate = Date.valueOf(LocalDate.now().minusDays(1)); // Yesterday
-        Time pastStartTime = Time.valueOf(LocalTime.now().minusHours(2)); // Started 2 hours ago
-        Time pastEndTime = Time.valueOf(LocalTime.now().minusHours(1));   // Ended 1 hour ago
-
-        Event event = new Event(eventName, eventDescription, maxLimit, pastDate, pastStartTime, pastEndTime, location, player, game);
-        
-        when(playerRepository.findByPlayerID(validPlayerId)).thenReturn(player);
-        when(eventRepository.findByEventID(validEventId)).thenReturn(event);
-        when(registrationRepository.existsById(new Registration.Key(player, event))).thenReturn(true);
-        
-        //Act
-        GlobalException e = assertThrows(
-        GlobalException.class, () -> registrationService.deleteRegistration(validPlayerId, validEventId)
-        );
-
-        //Assert
-        assertEquals(HttpStatus.BAD_REQUEST, e.getStatus());
-        assertEquals("Cannot delete: Event has already started or ended.", e.getMessage());
-    }
 }
